[project]
authors = [
  {name = "seonglae", email = "sungle3737@gmail.com"},
]
dependencies = [
    "transformers[torch]==4.33.2",
    "torch==2.0.1+cu118",
    "optimum==1.13.3",
    "onnx==1.13.1",
    "onnxruntime<1.16.0",
    "tqdm>=4.66.1",
    "huggingface-hub>=0.18.0",
    "fire>=0.5.0",
]
description = "Add your description here"
name = "transformers-js"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
  "autopep8>=2.0.4",
  "pip>=23.2.1",
  "mypy>=1.6.0",
]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[[tool.rye.sources]]
name = "cuda"
type = "index"
url = "https://download.pytorch.org/whl/cu118"
